--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
 
-    <title>CSS Architecture on a Shoestring</title>
+    <title>Going Isomorphic with React</title>
 
-    <meta name="description" content="Slides for a talk I gave at Be Responsive Melbourne in January 2014.">
+    <meta name="description" content="Slides for a talk I gave at MelbJS in July 2014.">
     <meta name="author" content="Ben Smithett">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -50,375 +50,345 @@
       <div class="slides">
 
 <section data-markdown>
-  # CSS Architecture
-  ## on a Shoestring
-  [@bensmithett](https://twitter.com/bensmithett)
+## Going Isomorphic with React
+[@bensmithett](https://twitter.com/bensmithett)
 </section>
 
 <section data-markdown>
-  ![](img/envato.png)
+## [React](http://facebook.github.io/react/)
+
+A JavaScript library for building user interfaces
+
+The V in MVC
 </section>
 
 <section data-markdown>
-  ![](img/lp.jpg)
-</section>
+This is a React component:
 
-<section data-markdown>
-  ![](img/cruise.jpg)
-</section>
-
-<section data-markdown>
-  ## Once upon a time...
-
-  - One huge CSS file
-  - No real structure
-  - New features? Kinda just added stuff to the bottom
-</section>
-
-<section data-markdown>
-  ## OOCSS
-  ## SMACSS
-  ## SUIT
-  ## BEM
-  ## North
-</section>
-
-<section data-markdown>
-  ## Sass
-  ## Less
-  ## Stylus
-</section>
-
-<section data-markdown>
-  ## Compass
-  ## Bourbon
-</section>
-
-<section data-markdown>
-  ## Bootstrap
-  ## Inuit
-  ## Susy
-  ## Singularity
-</section>
-
-<section data-markdown>
-  ## Grunt
-  ## Gulp
-  ## Yeoman
-</section>
-
-<section>
-  <img src="img/augustus.jpg">
-</section>
-
-<section data-markdown>
-  ## The basics
-  Solid, scalable, maintainable CSS architecture.
-</section>
-
-<section data-markdown>
-  ## app.scss
-</section>
-
-<section data-markdown>
-### app.scss
-```scss
-@import "vendor/normalize.css"
-@import "base"
-@import "components/*"
 ```
-</section>
-
-<section data-markdown>
-  ## [Normalize.css](http://necolas.github.io/normalize.css/)
-  Starts us on a level playing field.
-</section>
-
-<section data-markdown>
-## _base.scss
-```scss
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-a {
-  color: green;
-}
-```
-</section>
-
-<section data-markdown>
-  # Components
-</section>
-
-<section data-markdown>
-```
-.page {}
-.header {}
-.comment-box {}
-.avatar {}
-```
-</section>
-
-<section data-markdown>
-  #### Rule #1
-  ### Each component has its own file
-</section>
-
-<section data-markdown>
-```bash
-components/
-  _avatar.scss
-  _comment_box.scss
-  _header.scss
-  _page.scss
+var HiButton = React.createClass({
+  handleClick: function () {
+    alert("hi " + this.props.name);
+  },
+  render: function () {
+    return (
+      &lt;button onClick={this.handleClick}&gt;
+        Say hi
+      &lt;/button&gt;
+    );
+  }
+});
 ```
 </section>
 
 <section>
-<h3>When I see this HTML</h3>
-<code>&lt;div class="comment-box"&gt;</code>
+<pre>
+<code>react.renderComponent(&lt;HiButton name="Ben" /&gt;, document.body);</code>
+</pre>
+
+<p id="example1"></p>
+
+<script type="text/jsx">
+  /** @jsx React.DOM */
+  (function(){
+    var HiButton = React.createClass({
+      handleClick: function () {
+        alert("hi " + this.props.name);
+      },
+      render: function () {
+        return (
+          <button onClick={this.handleClick}>
+            Say hi
+          </button>
+        );
+      }
+    });
+
+    React.renderComponent(<HiButton name="Ben" />, document.getElementById("example1"));
+  })();
+</script>
+<style>
+  button {
+    padding: 0.2em;
+    font-size: 1em;
+  }
+</style>
+</section>
+
+<section data-markdown>
+```
+react.renderComponentToString(&lt;HiButton name="Ben" /&gt;);
+```
+
+returns this string...
+
+```
+&lt;button data-reactid=".1" data-react-checksum="762252829"&gt;
+  Say hi
+&lt;/button&gt;
+```
+</section>
+
+<section data-markdown>
+React component + ability to run JS
 <br><br>
-<h3>I know to look in</h3>
-<code>components/_comment_box.scss</code>
+=
+<br><br>
+Ability to render a React component to a HTML string
 </section>
 
 <section data-markdown>
-  #### Rule #2
-  ### A component has no knowledge of its context
+We can run JS on servers now...
+<br><br>
+... so we can render React components on the server!
+</section>
+
+<section data-markdown>
+## The End...?
+</section>
+
+<section data-markdown>
+### Let's talk about Views
+</section>
+
+<section data-markdown>
+### Let's talk about server-rendered Views
+
+![](img/yahoo-1998.jpg)
+</section>
+
+<section data-markdown>
+React is a pretty great option for server-rendered views.
 </section>
 
 <section>
-  <div class="b-page">
-    <div class="b-page__content">
-      <div class="b-page__sidebar">
-        <div class="b-avatar"></div>
-      </div>
-      <div class="b-page__main">
-        <div class="b-page__post">
-          <div class="b-avatar--post"></div>
-        </div>
-
-        <div class="b-page__post">
-          <div class="b-avatar--post"></div>
-        </div>
-      </div>
-    </div>
-  </div>
+Client-rendered view (Backbone)
+<br>
+<strong>Handlebars template</strong>
+<br>
+|
+<br>
+|
+<br>
+Server-rendered view (Rails)
+<br>
+<strong>ERB template</strong>
 </section>
 
 <section data-markdown>
-```scss
-.avatar {
-  display: block;
+ERB template:
 
-  > img {
-    display: block;
-    max-width: 100%;
-  }
-}
+![](img/erb.png)
+</section>
+
+<section data-markdown>
+What is a template?
+</section>
+
+<section>
+We give a template some data
+<br><br>
+It gives us back a string
+</section>
+
+<section data-markdown>
+Templates are just functions.
+</section>
+
+<section data-markdown>
+Early on they were big, ugly, complicated functions:
+
+![](img/php.png)
+
+*Source: W3Schools*
+</section>
+
+<section data-markdown>
+We reacted to unmaintainable spaghetti templates
+### "no logic in templates!"
+</section>
+
+<section data-markdown>
+But we wanted a little bit of flexibility...
+### "no business logic in templates!"
+(but the occasional loop or conditional is ok...)
+</section>
+
+<section data-markdown>
+Sometimes we need to do string manipulation, or sorting...
+### "view logic belongs in ViewModels, not templates!"
+(except loops & conditionals, which are still arbitrarily allowed in templates)
+</section>
+
+<section data-markdown>
+**Current state of play for server-rendered views:**
+
+- *Mostly* logic-less template, but loops & conditionals are allowed
+- Template logic written in the same language as other server code
+- ViewModel/Presenter handles more complex logic
+- Different files
+</section>
+
+<section data-markdown>
+A better server-rendered View: **React components**
+</section>
+
+<section data-markdown>
+![](img/component.png)
+</section>
+
+<section data-markdown>
+![](img/lex.jpg)
+</section>
+
+<section data-markdown>
+![](img/component1.png)
+</section>
+<section data-markdown>
+![](img/component2.png)
+</section>
+<section data-markdown>
+![](img/component3.png)
+</section>
+<section data-markdown>
+![](img/component4.png)
+</section>
+<section data-markdown>
+![](img/component5.png)
+</section>
+
+<section data-markdown>
+#### So using React for server-side templates is awesome
+</section>
+
+<section data-markdown>
+#### Meanwhile, back in 2014...
+client-side JS is a bit of a thing
+</section>
+
+<section>
+Client-rendered view
+<br>
+<strong>Handlebars template</strong>
+<br>
+|
+<br>
+|
+<br>
+Server-rendered view
+<br>
+<strong>ERB template</strong>
+</section>
+
+<section>
+Client-rendered view
+<br>
+<strong>React component</strong>
+<br>
+|
+<br>
+|
+<br>
+Server-rendered view
+<br>
+<strong>React component</strong>
+</section>
+
+<section data-markdown>
+## Isomorphic JavaScript!
+</section>
+
+<section data-markdown>
+![](img/airbnb.png)
+</section>
+
+<section data-markdown>
+### Isomorphic JavaScript
+
+Shared JavaScript that runs on both the client & server
+</section>
+
+<section data-markdown>
+### "Holy Grail" web app
+
+- Serve real server-rendered HTML
+- Client-side JS app bootstraps on top of server-rendered HTML
+  - rather than bootstrapping into an empty div
+- From that point on, it's a client-side JS app
+</section>
+
+<section data-markdown>
+Server
+
 ```
-</section>
-
-<section data-markdown>
-  #### Rule #3
-  ### Components can have subcomponents
-</section>
-
-<section data-markdown>
-```scss
-// components/_comment_box.scss
-.comment-box__avatar { ... }
+&lt;body&gt;
+  &lt;%= React.renderComponentToString(&lt;PizzaButton /&gt;); %&gt;
+&lt;/body&gt;
 ```
 
-```scss
-// components/_profile_box.scss
-.profile-box__avatar { ... }
+Browser
+
 ```
-</section>
-
-<section data-markdown>
-```css
-.comment-box__avatar {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  height: 50px;
-  width: 50px;
-}
+React.renderComponent(&lt;PizzaButton /&gt;, document.body);
 ```
+
+When browser-React encounters HTML rendered by server-React, it just adds event listeners.
 </section>
 
 <section data-markdown>
-```html
-&lt;div class=&quot;comment-box&quot;&gt;
-  &lt;div class=&quot;comment-box__avatar&quot;&gt;
-    
-    &lt;a class=&quot;avatar&quot; href=&quot;#&quot;&gt;
-      &lt;img src=&quot;...&quot;&gt;
-    &lt;/a&gt;
-
-  &lt;/div&gt;
-&lt;/div&gt;
-```
+Same component file used on client & server!
 </section>
 
 <section data-markdown>
-```html
-&lt;div class=&quot;comment-box&quot;&gt;
-  &lt;div class=&quot;comment-box__avatar&quot;&gt;
-    
-    &lt;Avatar src=&quot;foo.jpg&quot; /&gt;
+But what if my back end isn't node.js?
 
-  &lt;/div&gt;
-&lt;/div&gt;
-```
+**How can I do this in Rails/PHP/.NET/whatever?**
 </section>
 
 <section data-markdown>
-  #### Rule #4
-  ### Minimise depth of applicibility
+### View rendering as a service
+
+Your app might already talks to other services over HTTP
+
+- Search
+- Authentication
+- Third party APIs
 </section>
 
 <section data-markdown>
-```scss
-.comment-box {
-  a {
-    color: blue;
-  }
-}
-```
+*https://github.com/facebook/react/tree/master/examples/server-rendering*
+
+![](img/server-render.png)
 </section>
 
 <section data-markdown>
-```scss
-.comment-box {
-  > a {
-    color: blue;
-  }
-}
-```
+https://github.com/reactjs/react-rails
 </section>
 
 <section data-markdown>
-```scss
-.comment-box__link {
-  color: blue;
-}
-```
+#### Bonus! Free progressive enhancement!
+
+Every component can be rendered in any state on the server.
+
+If something goes wrong in the browser, just fall back to a full page load.
 </section>
 
 <section data-markdown>
-  #### Rule #5
-  ### Components should be small & disposable
+live demo time...
 </section>
 
 <section data-markdown>
-  If a class doesn't fit on a 27" monitor without scrolling, it's too big!
-</section>
+# Thanks!
 
-<section data-markdown>
-```
-.comment-box {
-  ...
-}
+[@bensmithett](https://twitter.com/bensmithett)
 
-.comment-box__avatar {
-  ...
-  a {
-    ...
-  }
-  img {
-    ...
-  }
-}
-```
-</section>
+-----
 
-<section data-markdown>
-  # Summary
-</section>
+[Server-rendered React components in Rails](http://bensmithett.com/server-rendered-react-components-in-rails/)
 
-<section data-markdown>
-  ### Everything is a component
-</section>
+[React server-rendering examples](https://github.com/facebook/react/tree/master/examples/server-rendering)
 
-<section data-markdown>
-  ### Each component has its own file
-</section>
-
-<section data-markdown>
-  ### A component knows nothing about its context
-</section>
-
-<section data-markdown>
-  ### Create sized, positioned containers for nested components
-</section>
-
-<section data-markdown>
-  ### Make small, disposable components
-</section>
-
-<section data-markdown>
-```bash
-stylesheets/
-  app.scss
-  _base.scss
-  vendor/
-    normalize.css
-  components/
-    _comment_box.scss
-    _header.scss
-    _page.scss
-    ...
-```
-</section>
-
-<section data-markdown>
-```bash
-components/
-  comment_box/
-    _comment_box.scss
-    _comment_box.html
-    _comment_box.js
-  page/
-    _page.scss
-    _page.html
-    _page.js
-    ...
-```
-</section>
-
-<section data-markdown>
-  ### What if I have existing CSS?
-</section>
-
-<section data-markdown>
-```bash
-stylesheets/
-  _utilities.scss
-  _forms.scss
-  _typography.scss
-  _some_page_specific_junk.scss
-```
-</section>
-
-<section data-markdown>
-```bash
-stylesheets/
-  base/
-    _utilities.scss
-    _forms.scss
-    _typography.scss
-    _some_page_specific_junk.scss
-  components/
-    _new_thing.scss
-```
-</section>
-
-<section data-markdown>
-  # Thanks!
-  [@bensmithett](https://twitter.com/bensmithett)
+[Airbnb post introducing Rendr](http://nerds.airbnb.com/weve-launched-our-first-nodejs-app-to-product/)
 </section>
 
       </div>
@@ -427,6 +397,8 @@ stylesheets/
 
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.min.js"></script>
+    <script src="js/react.js"></script>
+    <script src="js/jsx.js"></script>
 
     <script>
 
